Updated Dylan configs.
Added -stretchaspect to CS1.6

--- a/dylancs16.cfg
+++ b/dylancs16.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 11, 2020   |   "
+echo "   |   Jun. 16, 2020   |   "
 
 // Launch: -freq 144 -nojoy -stretchaspect
 
@@ -87,7 +87,7 @@ cl_crosshair_translucent "0"
 // Mouse     //
 ///////////////
 
-sensitivity "3.3425"
+sensitivity "1.256637"
 zoom_sensitivity_ratio "1.0"
 
 +mlook
@@ -144,22 +144,22 @@ bind "7" "use weapon_c4"
 bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
-bind "b" "impulse 201"
+bind "b" "buy"
 bind "c" "needbackup"
 bind "d" "+moveright"
 bind "e" "use weapon_knife"
 bind "f" "hand"
 bind "g" "drop"
-bind "h" "say_team Drop"
+unbind "h"
 bind "i" "radio1"
 bind "j" "showbriefing"
-bind "k" "bind c +voicerecord"
+bind "k" "+voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
 bind "o" "radio2"
 bind "p" "radio3"
-bind "q" "+attack2"
+bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
@@ -180,10 +180,10 @@ bind "KP_RIGHTARROW" "defuser"
 bind "KP_HOME" "shield"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
-bind "KP_SLASH" "say_team <- Left"
-bind "KP_MUL" "say_team Right ->"
-bind "KP_MINUS" "say_team Upper"
-bind "KP_PLUS" "say_team Lower"
+unbind "KP_SLASH"
+unbind "KP_MUL"
+unbind "KP_MINUS"
+unbind "KP_PLUS"
 bind "KP_ENTER" "buy"
 unbind "["
 unbind "]"
@@ -194,20 +194,20 @@ bind "," "buyammo1"
 bind "." "buyammo2"
 unbind "/"
 unbind "\"
-bind "-" "xsize"
-bind "=" "dyn"
+unbind "-"
+unbind "="
 unbind "ENTER"
 bind "SPACE" "+jump"
 unbind "BACKSPACE"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
 bind "ESCAPE" "cancelselect"
-bind "INS" "voice_scale 0; echo - Voice Scale: 0%"
-bind "HOME" "voice_scale 0.3; echo - Voice Scale: 30%"
-bind "PGUP" "voice_scale 0.75; echo - Voice Scale: 75%"
-bind "DEL" "volume 0; echo - Volume: 0%"
-bind "END" "volume 0.2; echo - Volume: 20%"
-bind "PGDN" "volume 1; echo - Volume: 100%"
+unbind "INS"
+unbind "HOME"
+unbind "PGUP"
+unbind "DEL"
+unbind "END"
+unbind "PGDN"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
 bind "ALT" "+jump; -attack; -jump"
@@ -217,23 +217,23 @@ unbind "UPARROW"
 unbind "LEFTARROW"
 unbind "DOWNARROW"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop"
+unbind "F1"
 bind "F2" "slot3"
 bind "F3" "slot4"
 bind "F4" "slot5"
-bind "F5" "say_team A"
-bind "F6" "say_team B"
-bind "F7" "say_team Bomb go A"
-bind "F8" "say_team Bomb go B"
+unbind "F5"
+unbind "F6"
+unbind "F7"
+unbind "F8"
 bind "F9" "graph"
 bind "F10" "quit"
-bind "F11" "exec cs16.cfg"
-bind "F12" "exec cs16.cfg"
+bind "F11" "exec dylancs16.cfg"
+bind "F12" "exec dylancs16.cfg"
 bind "MOUSE1" "+attack"
-bind "MOUSE2" "lastinv"
+bind "MOUSE2" "+attack2"
 bind "MOUSE3" "impulse 100"
-bind "MOUSE4" "voice"
-bind "MOUSE5" "+attack2"
+bind "MOUSE4" "lastinv"
+bind "MOUSE5" "lastinv"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -267,6 +267,6 @@ gl_texturemode "GL_LINEAR_MIPMAP_LINEAR"
 ///////////////
 
 
-echo "   |  CAT 1.6 LOADED!  |   "
+echo "   | DYLAN 1.6 LOADED! |   "
 echo "   ---------------------   "
 echo "                           "
