--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 22, 2020   |   "
+echo "   |   Jun. 16, 2020   |   "
 
 // Launch: -nojoy -novid -tickrate 128
 
@@ -94,7 +94,7 @@ cl_crosshairdot "0"
 cl_crosshairgap "0"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
-cl_crosshairsize "5.5"
+cl_crosshairsize "5"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
 cl_crosshairusealpha "1"
@@ -112,7 +112,7 @@ safezonex "1.0"
 safezoney "1.0"
 
 hud_showtargetid "1"
-hud_scaling "0.95"
+hud_scaling "0.85"
 cl_hud_radar_scale "1.3"
 
 cl_radar_always_centered "1"
@@ -168,7 +168,7 @@ cl_invites_only_mainmenu "0"
 ///////////////
 
 cl_player_ping_mute "0"
-cl_mute_enemy_team "0"
+cl_mute_enemy_team "1"
 cl_mute_all_but_friends_and_party "1"
 cl_hide_avatar_images "2"
 cl_sanitize_player_names "0"
@@ -178,16 +178,21 @@ cl_sanitize_player_names "0"
 // UI/UX     //
 ///////////////
 
-mat_monitorgamma "2.2"
+mat_monitorgamma "1.88"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 
 cl_autowepswitch "0"
 cl_righthand "1"
+cl_playerspray_auto_apply "1"
+cl_sniper_delay_unscope "0"
 
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
-cl_playerspray_auto_apply "1"
+cl_buywheel_nomousecentering "0"
+cl_buywheel_nonumberpurchasing "0"
+cl_autobuy "vest ak47 m4a1 galilar famas ssg08 flashbang defuser"
+cl_rebuy "Armor PrimaryWeapon Flashbang SmokeGrenade Flashbang HEGrenade Molotov IncGrenade Defuser SecondaryWeapon Taser Decoy"
 
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "1"
@@ -211,14 +216,14 @@ cl_bobamt_lat "0.1"
 cl_bobamt_vert "0.1"
 
 r_drawtracers_firstperson "1"
-r_dynamic "0"
+r_dynamic "1"
 
 
 ///////////////
 // Mouse     //
 ///////////////
 
-sensitivity "1.34"
+sensitivity "1.256637"
 zoom_sensitivity_ratio_mouse "1.0"
 zoom_sensitivity_ratio_joystick "1.0"
 
@@ -251,7 +256,7 @@ lookstrafe "0"
 unbindall
 
 //alias "+robocop" "cl_crosshairsize 450"
-//alias "-robocop" "cl_crosshairsize 5.5"
+//alias "-robocop" "cl_crosshairsize 5"
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -264,17 +269,17 @@ bind "7" "slot5"
 bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
-bind "b" "+spray_menu"
+bind "b" "buymenu"
 bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
 unbind "h"
-bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
-bind "j" "impulse 200"
+unbind "i"
+unbind "j"
 bind "k" "+voicerecord"
-bind "l" "impulse 100"
+unbind "l"
 bind "m" "teammenu"
 bind "n" "noclip"
 unbind "o"
@@ -286,7 +291,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "slot12; radio3"
+bind "x" "slot12"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "KP_INS" "buy vest"
@@ -311,14 +316,14 @@ unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
 unbind ","
-bind "." "toggle hud_scaling 0.5 0.95"
+unbind "."
 unbind "/"
-bind "\" "toggle cl_crosshairdot 0 1"
+unbind "\"
 unbind "-"
-bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
+unbind "="
 unbind "ENTER"
 bind "SPACE" "+jump"
-bind "BACKSPACE" "toggle cl_showpos 1 0"
+unbind "BACKSPACE"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
@@ -328,12 +333,12 @@ unbind "HOME"
 unbind "PGUP"
 unbind "DEL"
 unbind "END"
-bind "PGDN" "volume 1.0; echo - Volume: 100%"
+unbind "PGDN"
 unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
 bind "ALT" "+jump; -attack; -attack2; -jump"
-bind "RALT" "+strafe"
+unbind "RALT"
 bind "CTRL" "+duck"
 unbind "RCTRL"
 unbind "LWIN"
@@ -351,7 +356,7 @@ unbind "F5"
 unbind "F6"
 unbind "F7"
 unbind "F8"
-bind "F9" "toggle net_graph 1 0"
+unbind "F9"
 bind "F10" "quit prompt"
 bind "F11" "exec dylancsgo.cfg"
 bind "F12" "exec dylancsgo.cfg"
@@ -389,7 +394,7 @@ func_break_max_pieces "0"
 
 cl_forcepreload "0"
 
-mat_queue_mode "2"
+mat_queue_mode "-1"
 engine_no_focus_sleep "0"
 cpu_frequency_monitoring "0"
 
