--- a/dylancss.cfg
+++ b/dylancss.cfg
@@ -1,6 +1,9 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 25, 2018   |   "
+echo "   |   Jun. 16, 2020   |   "
+
+// Launch: -nojoy -novid
+
 
 ///////////////
 // Rates     //
@@ -11,23 +14,27 @@ fps_max "1000"
 rate "100000"
 cl_cmdrate "100"
 cl_updaterate "100"
-cl_interp "0"
-cl_interp_ratio "1"
+cl_interp "0.000000"
+cl_interp_ratio "1.0"
+
+cl_lagcompensation "1"
+//cl_predict "1"
+cl_predictweapons "1"
 
 
 ///////////////
 // Sound     //
 ///////////////
 
-volume "1"
+volume "1.0"
 
 snd_mixahead "0.075"
-snd_musicvolume "1"
+snd_musicvolume "1.0"
 snd_mute_losefocus "0"
 snd_legacy_surround "0"
 
 voice_enable "1"
-voice_scale "0.30"
+voice_scale "0.2"
 voice_maxgain "10"
 voice_modenable "1"
 
@@ -62,8 +69,8 @@ cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "64"
-net_graphpos "1"
+net_graphheight "1000"
+net_graphpos "100"
 
 net_graphsolid "1"
 net_graphtext "1"
@@ -76,10 +83,10 @@ net_scale "5"
 
 
 ///////////////
-// GUI       //
+// UI/UX     //
 ///////////////
 
-mat_monitorgamma "1.600000"
+mat_monitorgamma "2.2"
 mat_vsync "0"
 
 //viewmodel_fov "54"
@@ -108,20 +115,20 @@ cl_showhelp "1"
 
 crosshair "1"
 cl_observercrosshair "1"
+cl_dynamiccrosshair "1"
 
 cl_crosshairalpha "200"
 cl_crosshaircolor "0"
-cl_crosshaircolor_r "50"
+cl_crosshaircolor_r "250"
 cl_crosshaircolor_g "250"
-cl_crosshaircolor_b "50"
+cl_crosshaircolor_b "250"
 cl_crosshairdot "1"
-cl_crosshairscale "1200"
-cl_crosshairsize "4"
+cl_crosshairsize "5.5"
 cl_crosshairspreadscale "0.3"
 cl_crosshairthickness "0.5"
 cl_crosshairusealpha "1"
 
-cl_dynamiccrosshair "1"
+cl_crosshairscale "0"
 cl_scalecrosshair "1"
 
 
@@ -129,7 +136,7 @@ cl_scalecrosshair "1"
 // Mouse     //
 ///////////////
 
-sensitivity "3.33"
+sensitivity "1.256637"
 zoom_sensitivity_ratio "1.0"
 
 cl_mouseenable "1"
@@ -137,7 +144,7 @@ cl_mouselook "1"
 joystick "0"
 
 m_customaccel "0"
-m_customaccel_exponent "1.000000"
+m_customaccel_exponent "1.05"
 m_customaccel_max "0"
 m_customaccel_scale "0.04"
 m_filter "0"
@@ -160,11 +167,8 @@ lookstrafe "0"
 
 unbindall
 
-alias "+jumpthrow" "-attack; +jump"
-alias "-jumpthrow" "-jump"
-
-alias "+showpos" "cl_showpos 1; cl_crosshairsize 450"
-alias "-showpos" "cl_showpos 0; cl_crosshairsize 6"
+//alias "+robocop" "cl_crosshairsize 450"
+//alias "-robocop" "cl_crosshairsize 5.5"
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -181,11 +185,11 @@ bind "b" "impulse 201"
 bind "c" "radio3"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "toggle cl_righthand 1 0"
+bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 unbind "h"
 unbind "i"
-bind "j" "impulse 100"
+unbind "j"
 bind "k" "+voicerecord"
 unbind "l"
 bind "m" "chooseteam"
@@ -197,7 +201,7 @@ bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "toggle mat_monitorgamma 2.6 1.6; r_cleardecals"
+bind "v" "r_cleardecals; impulse 100"
 bind "w" "+forward"
 bind "x" "radio2"
 bind "y" "messagemode"
@@ -226,37 +230,37 @@ bind "`" "toggleconsole"
 bind "," "buyammo1"
 bind "." "buyammo2"
 unbind "/"
-bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 6"
-bind "=" "toggle cl_crosshaircolor 0 1"
+unbind "\"
+unbind "-"
+unbind "="
 unbind "ENTER"
 bind "SPACE" "+jump"
-bind "BACKSPACE" "toggle cl_showpos 1 0"
+unbind "BACKSPACE"
 bind "TAB" "+showscores"
 bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 unbind "INS"
-bind "HOME" "voice_enable 1; voice_scale 0.3; echo - Voice: 30%"
+unbind "HOME"
 unbind "PGUP"
 unbind "DEL"
 unbind "END"
-bind "PGDN" "volume 1; echo - Volume: 100%"
+unbind "PGDN"
 bind "PAUSE" "pause"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-unbind "ALT"
-bind "RALT" "+strafe"
+bind "ALT" "+jump; -attack; -jump"
+unbind "RALT"
 bind "CTRL" "+duck"
 unbind "RCTRL"
-bind "LWIN" "say Windows key pressed."
-bind "RWIN" "say Windows key pressed."
-bind "APP" "say App key pressed."
+unbind "LWIN"
+unbind "RWIN"
+unbind "APP"
 unbind "UPARROW"
 unbind "LEFTARROW"
 unbind "DOWNARROW"
 unbind "RIGHTARROW"
-bind "F1" "use weapon_c4; drop"
+unbind "F1"
 bind "F2" "rebuy"
 unbind "F3"
 unbind "F4"
@@ -266,7 +270,7 @@ unbind "F7"
 unbind "F8"
 bind "F9" "toggle net_graph 1 0"
 bind "F10" "quit"
-bind "F11" ""
+bind "F11" "exec dylancss.cfg"
 bind "F12" "exec dylancss.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
@@ -278,7 +282,7 @@ bind "MWHEELDOWN" "+jump"
 
 
 ///////////////
-// Cvars     //
+// Misc      //
 ///////////////
 
 //developer "0"
@@ -290,13 +294,19 @@ cl_downloadfilter "all"
 cl_allowdownload "1"
 cl_allowupload "1"
 
+cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
 
 cl_forcepreload "1"
 
+cl_minmodels "1"
+cl_min_ct "1"
+cl_min_t "2"
+
 skill "3"
 
 mat_queue_mode "2"
+engine_no_focus_sleep "0"
 
 cl_clanid "2456601"
 
@@ -304,6 +314,8 @@ cl_clanid "2456601"
 ///////////////
 // End       //
 ///////////////
+
+play "buttons\weapon_confirm.wav"
 
 echo "   |  DylanCSS LOADED  |   "
 echo "   ---------------------   "
