Added back refresh rate.

--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 28, 2020   |   "
+echo "   |   Jun. 19, 2020   |   "
 
-// Launch: -novid -console -disable_d3d9ex
+// Launch: -freq 144 -nojoy -novid -console -disable_d3d9ex
 
 
 ///////////////
@@ -136,7 +136,7 @@ cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "0"
+net_graphheight "64"
 net_graphpos "1"
 net_graphproportionalfont "1"
 net_graphtext "1"
@@ -167,6 +167,7 @@ cl_invites_only_mainmenu "0"
 cl_player_ping_mute "0"
 cl_mute_enemy_team "0"
 cl_mute_all_but_friends_and_party "0"
+cl_filtertext_enabled "1"
 cl_hide_avatar_images "2"
 cl_sanitize_player_names "0"
 
@@ -277,7 +278,7 @@ bind "i" "cl_crosshairdot 1; cl_crosshairgap -1; cl_crosshairsize 5; cl_crosshai
 bind "j" "impulse 200"
 bind "k" "+voicerecord"
 bind "l" "impulse 100"
-bind "m" "teammenu; say_team Mid"
+bind "m" "teammenu"
 bind "n" "noclip"
 bind "o" "cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairsize 0.5; cl_crosshairthickness 2.5"
 bind "p" "cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairsize 1; cl_crosshairstyle 4"
@@ -288,7 +289,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "slot12; radio3"
+bind "x" "slot12"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "KP_INS" "buy vest"
