--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 16, 2020   |   "
+echo "   |   Jun. 19, 2020   |   "
 
-// Launch: -nojoy -novid -tickrate 128
+// Launch: -freq 75 -nojoy -novid -tickrate 128
 
 
 ///////////////
@@ -80,7 +80,7 @@ crosshair "1"
 cl_observercrosshair "1"
 cl_fixedcrosshairgap "-3"
 
-cl_crosshair_sniper_width "2"
+cl_crosshair_sniper_width "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_drawoutline "0"
 cl_crosshair_outlinethickness "1"
@@ -94,7 +94,7 @@ cl_crosshairdot "0"
 cl_crosshairgap "0"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
-cl_crosshairsize "5"
+cl_crosshairsize "4"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
 cl_crosshairusealpha "1"
@@ -139,8 +139,8 @@ cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "1000"
-net_graphpos "2"
+net_graphheight "64"
+net_graphpos "1"
 net_graphproportionalfont "1"
 net_graphtext "1"
 
@@ -170,6 +170,7 @@ cl_invites_only_mainmenu "0"
 cl_player_ping_mute "0"
 cl_mute_enemy_team "1"
 cl_mute_all_but_friends_and_party "1"
+cl_filtertext_enabled "1"
 cl_hide_avatar_images "2"
 cl_sanitize_player_names "0"
 
@@ -256,7 +257,7 @@ lookstrafe "0"
 unbindall
 
 //alias "+robocop" "cl_crosshairsize 450"
-//alias "-robocop" "cl_crosshairsize 5"
+//alias "-robocop" "cl_crosshairsize 4"
 
 bind "0" "slot10"
 bind "1" "slot1"
