--- a/dylancss.cfg
+++ b/dylancss.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 16, 2020   |   "
+echo "   |   Jun. 19, 2020   |   "
 
-// Launch: -nojoy -novid
+// Launch: -freq 75 -nojoy -novid
 
 
 ///////////////
@@ -69,8 +69,8 @@ cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "1000"
-net_graphpos "100"
+net_graphheight "64"
+net_graphpos "1"
 
 net_graphsolid "1"
 net_graphtext "1"
