Fixed CSS mat_monitorgamma crash anomaly.
CSSource Notes:
- When the game launches in a darker "brightness" state (`mat_monitorgamma 2.2`), toggling to a brighter state (`mat_monitorgamma 1.6`) while in-game will cause the game to crash.
- `mat_monitorgamma` crashes when using either the `toggle` command or `incrementvar` command.
- To fix this, set `mat_monitorgamma` to its brightest state `1.6` on launch; toggling it afterwards will not cause the game to crash -- for now.
- Possibly related to the CSGO freeze/crash bug.

--- a/napkincs16.cfg
+++ b/napkincs16.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 06, 2019   |   "
+echo "   |   Jul. 05, 2020   |   "
 
-// Launch: -freq 240 -nojoy
+// Launch: -freq 240 -nojoy -stretchaspect
 
 // Renderer:        OpenGL
 // HD Models:       Unchecked
@@ -153,7 +153,7 @@ bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "radio1"
 bind "j" "showbriefing"
-unbind "k"
+bind "k" "+voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
 bind "n" "nightvision"
@@ -221,10 +221,10 @@ bind "F1" "use weapon_c4; drop"
 bind "F2" "slot3"
 bind "F3" "slot4"
 bind "F4" "slot5"
-bind "F5" "say_team A"
-bind "F6" "say_team B"
-bind "F7" "say_team Bomb go A"
-bind "F8" "say_team Bomb go B"
+unbind "F5"
+unbind "F6"
+unbind "F7"
+unbind "F8"
 bind "F9" "graph"
 bind "F10" "quit"
 bind "F11" "exec napkincs16.cfg"
