--- a/napkincss.cfg
+++ b/napkincss.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 06, 2019   |   "
+echo "   |   Jul. 05, 2020   |   "
 
-// Launch: -freq 240 -nojoy -novid
+// Launch: -freq 240 -nojoy -novid -console
 
 
 ///////////////
@@ -83,7 +83,7 @@ net_scale "5"
 
 
 ///////////////
-// UI        //
+// UI/UX     //
 ///////////////
 
 mat_monitorgamma "1.6"
@@ -188,12 +188,12 @@ bind "e" "slot3"
 bind "f" "incrementvar cl_righthand 0 1 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
-bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 100 40 250; toggle cl_crosshaircolor_b 60 120 250"
-bind "j" "radio1; impulse 200"
-unbind "k"
+bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
+bind "j" "impulse 200"
+bind "k" "+voicerecord"
 bind "l" "impulse 100"
 bind "m" "chooseteam"
-bind "n" "nightvision"
+bind "n" "nightvision; noclip; sm_noclip @me"
 bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2; cl_crosshairdot 0; cl_crosshairspreadscale 0.05"
 bind "p" "cl_crosshairsize 1; cl_crosshairspreadscale 0.3"
 bind "q" "lastinv"
@@ -227,8 +227,8 @@ unbind "]"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
-bind "," "buyammo1"
-bind "." "buyammo2"
+bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
+bind "." "buyammo1; buyammo2"
 unbind "/"
 bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 4.5 2 1 5.5"
@@ -252,11 +252,11 @@ unbind "RSHIFT"
 bind "ALT" "+jump; -attack; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
-unbind "RCTRL"
+bind "RCTRL" "sm_admin"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
-bind "UPARROW" "incrementvar cl_crosshaircolor 0 1 1"
+bind "UPARROW" "toggle cl_crosshairthickness 1 0.5"
 unbind "LEFTARROW"
 bind "DOWNARROW" "toggle cl_dynamiccrosshair 0 1"
 unbind "RIGHTARROW"
@@ -276,7 +276,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "impulse 100"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "incrementvar mat_monitorgamma 1.6 2.7 1"
+bind "MOUSE5" "toggle mat_monitorgamma 2.2 1.6"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
@@ -314,6 +314,8 @@ cl_clanid "2456601"
 ///////////////
 // End       //
 ///////////////
+
+play "buttons\weapon_confirm.wav"
 
 echo "   | NAPKIN CSS LOADED |   "
 echo "   ---------------------   "
