--- a/css.cfg
+++ b/css.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Aug. 15, 2019   |   "
+echo "   |   Jul. 05, 2020   |   "
 
-// Launch: -freq 144 -nojoy -novid
+// Launch: -freq 144 -nojoy -novid -console
 
 
 ///////////////
@@ -86,7 +86,7 @@ net_scale "5"
 // UI/UX     //
 ///////////////
 
-mat_monitorgamma "2.2"
+mat_monitorgamma "1.6"
 mat_vsync "0"
 
 //viewmodel_fov "54"
@@ -275,7 +275,7 @@ bind "F12" "exec css.cfg"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "lastinv"
 bind "MOUSE3" "impulse 100"
-bind "MOUSE4" "toggle mat_monitorgamma 1.6 2.2"
+bind "MOUSE4" "toggle mat_monitorgamma 2.2 1.6"
 bind "MOUSE5" "+attack2"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
