--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 26, 2020   |   "
+echo "   |   Jul. 05, 2020   |   "
 
-// Launch: -nojoy -novid -fullscreen +mat_software_aa_strength 0
+// Launch: -freq 240 -nojoy -novid -console -fullscreen +mat_software_aa_strength 0
 
 
 ///////////////
@@ -136,7 +136,7 @@ cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "0"
+net_graphheight "64"
 net_graphpos "1"
 net_graphproportionalfont "1"
 net_graphtext "1"
@@ -167,6 +167,7 @@ cl_invites_only_mainmenu "0"
 cl_player_ping_mute "0"
 cl_mute_enemy_team "0"
 cl_mute_all_but_friends_and_party "0"
+cl_filtertext_enabled "1"
 cl_hide_avatar_images "2"
 cl_sanitize_player_names "0"
 
@@ -288,7 +289,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "slot12; radio3"
+bind "x" "slot12"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "KP_INS" "buy vest"
@@ -312,7 +313,7 @@ bind "]" "toggle cl_crosshairgap 0 -1 -2 2 1"
 unbind "SEMICOLON"
 bind "'" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 bind "`" "toggleconsole"
-bind "," "toggle mat_monitorgamma 1.88 2.22 2.6"
+bind "," "toggle mat_monitorgamma 2.6 2.22 1.88"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
@@ -361,7 +362,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "toggle mat_monitorgamma 1.88 2.22"
+bind "MOUSE5" "toggle mat_monitorgamma 2.22 1.88"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
