--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jun. 19, 2020   |   "
+echo "   |   Oct. 29, 2020   |   "
 
 // Launch: -freq 75 -nojoy -novid -tickrate 128
 
@@ -20,7 +20,7 @@ net_client_steamdatagram_enable_override "0"
 fps_max "400"
 fps_max_menu "120"
 
-rate "20480"
+rate "128000"
 cl_cmdrate "128"
 cl_updaterate "128"
 cl_interp "0"
@@ -40,7 +40,7 @@ snd_musicvolume_multiplier_inoverlay "0"
 voice_caster_enable "0"
 voice_caster_scale "0"
 snd_hwcompat "0"
-voice_enable "0"
+voice_enable "1"
 voice_scale "0.1"
 voice_positional "1"
 snd_mute_losefocus "0"
@@ -78,6 +78,7 @@ voice_mixer_volume "1.0"
 
 crosshair "1"
 cl_observercrosshair "1"
+cl_show_observer_crosshair "2"
 cl_fixedcrosshairgap "-3"
 
 cl_crosshair_sniper_width "1"
@@ -169,8 +170,7 @@ cl_invites_only_mainmenu "0"
 
 cl_player_ping_mute "0"
 cl_mute_enemy_team "1"
-cl_mute_all_but_friends_and_party "1"
-cl_filtertext_enabled "1"
+cl_mute_all_but_friends_and_party "0"
 cl_hide_avatar_images "2"
 cl_sanitize_player_names "0"
 
@@ -271,7 +271,7 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "buymenu"
-bind "c" "player_ping"
+bind "c" "+voicerecord"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
@@ -279,7 +279,7 @@ bind "g" "drop"
 unbind "h"
 unbind "i"
 unbind "j"
-bind "k" "+voicerecord"
+bind "k" "player_ping"
 unbind "l"
 bind "m" "teammenu"
 bind "n" "noclip"
@@ -290,7 +290,7 @@ bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "r_cleardecals; +lookatweapon"
+bind "v" "+lookatweapon"
 bind "w" "+forward"
 bind "x" "slot12"
 bind "y" "messagemode"
