--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jul. 05, 2020   |   "
+echo "   |   Oct. 29, 2020   |   "
 
 // Launch: -freq 240 -nojoy -novid -console -fullscreen +mat_software_aa_strength 0
 
@@ -75,6 +75,7 @@ voice_mixer_volume "1.0"
 
 crosshair "1"
 cl_observercrosshair "1"
+cl_show_observer_crosshair "2"
 cl_fixedcrosshairgap "-3"
 
 cl_crosshair_sniper_width "1"
@@ -109,7 +110,7 @@ safezonex "0.88"
 safezoney "0.88"
 
 hud_showtargetid "1"
-hud_scaling "0.95"
+hud_scaling "0.85"
 cl_hud_radar_scale "1.3"
 
 cl_radar_always_centered "1"
@@ -167,7 +168,6 @@ cl_invites_only_mainmenu "0"
 cl_player_ping_mute "0"
 cl_mute_enemy_team "0"
 cl_mute_all_but_friends_and_party "0"
-cl_filtertext_enabled "1"
 cl_hide_avatar_images "2"
 cl_sanitize_player_names "0"
 
@@ -314,7 +314,7 @@ unbind "SEMICOLON"
 bind "'" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 bind "`" "toggleconsole"
 bind "," "toggle mat_monitorgamma 2.6 2.22 1.88"
-bind "." "toggle hud_scaling 0.5 0.95"
+bind "." "toggle hud_scaling 0.95 0.5 0.85"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 2 1 5 4"
