Updated train.cfg and added practice version.
train.cfg       - strictly knowledge based
train2.cfg      - for practice
bhopserver.cfg  - intended for dedicated kz/bhop servers

--- a/bhopserver.cfg
+++ b/bhopserver.cfg
@@ -1,6 +1,6 @@
 echo
 echo "   ---------------------   "
-echo "   |   Jan. 26, 2020   |   "
+echo "   |   Oct. 31, 2020   |   "
 
 bot_kick
 
@@ -25,6 +25,8 @@ sv_min_jump_landing_sound 600
 sv_falldamage_scale 0
 sv_ladder_scale_speed 1
 sv_timebetweenducks 0
+
+sv_disable_radar 1
 
 echo "   | BHOPSERVER LOADED |   "
 echo "   ---------------------   "
