--- a/train2.cfg
+++ b/train2.cfg
@@ -6,7 +6,7 @@ echo "   |   Oct. 31, 2020   |   "
 // Game Mode
 
 game_type 0
-game_mode 1
+game_mode 0
 
 exec gamemode_competitive.cfg
 
@@ -21,7 +21,7 @@ mp_solid_teammates 1
 mp_buytime 3600
 mp_c4timer 40
 mp_warmuptime 5
-mp_freezetime 3
+mp_freezetime 0
 mp_roundtime 1.92
 mp_roundtime_defuse 1.92
 mp_roundtime_hostage 1.92
@@ -76,29 +76,29 @@ sv_timebetweenducks 0.4
 
 // Trajectory and Accuracy
 
-cl_grenadepreview 1
-sv_grenade_trajectory 1
+cl_grenadepreview 0
+sv_grenade_trajectory 0
 sv_grenade_trajectory_dash 1
 
-sv_showimpacts 3
+sv_showimpacts 0
 sv_showimpacts_time 20
-sv_showlagcompensation 1
+sv_showlagcompensation 0
 
 cl_crosshair_recoil 0
-cl_weapon_debug_show_accuracy 1
-weapon_accuracy_nospread 1
+cl_weapon_debug_show_accuracy 0
+weapon_accuracy_nospread 0
 
 
 // Health, Armor, and Ammunition
 
-sv_regeneration_force_on 0
+sv_regeneration_force_on 1
 sv_falldamage_scale 1
 mp_damage_headshot_only 0
 mp_damage_vampiric_amount 0
 
-mp_free_armor 0
+mp_free_armor 2
 
-sv_infinite_ammo 2
+sv_infinite_ammo 1
 ammo_grenade_limit_default 1
 ammo_grenade_limit_flashbang 2
 ammo_grenade_limit_total 6
@@ -106,9 +106,9 @@ ammo_grenade_limit_total 6
 
 // Weapons
 
-mp_drop_knife_enable 1
+mp_drop_knife_enable 0
 mp_drop_grenade_enable 0
-mp_give_player_c4 1
+mp_give_player_c4 0
 mp_defuser_allocation 0
 mp_items_prohibited ""
 mp_weapons_allow_map_placed 0
@@ -120,13 +120,13 @@ mp_ct_default_secondary "weapon_hkp2000"
 mp_t_default_grenades "weapon_snowball weapon_flashbang weapon_flashbang weapon_smokegrenade"
 mp_ct_default_grenades "weapon_snowball weapon_flashbang weapon_flashbang weapon_smokegrenade"
 
-mp_death_drop_breachcharge 1
-mp_death_drop_c4 1
-mp_death_drop_defuser 1
-mp_death_drop_grenade 2
-mp_death_drop_gun 1
-mp_death_drop_healthshot 1
-mp_death_drop_taser 1
+mp_death_drop_breachcharge 0
+mp_death_drop_c4 0
+mp_death_drop_defuser 0
+mp_death_drop_grenade 0
+mp_death_drop_gun 0
+mp_death_drop_healthshot 0
+mp_death_drop_taser 0
 
 
 // Bots
@@ -137,7 +137,7 @@ bot_kick
 bot_difficulty 3
 bot_dont_shoot 1
 bot_join_team any
-bot_mimic_yaw_offset 0
+bot_mimic_yaw_offset 180
 bot_quota 0
 bot_stop 1
 
@@ -146,6 +146,6 @@ mp_restartgame 1
 
 play "buttons\light_power_on_switch_01.wav"
 
-echo "   |   TRAIN LOADED!   |   "
+echo "   |  TRAIN 2 LOADED!  |   "
 echo "   ---------------------   "
 echo "                           "
