Updated deathmatch training.

--- a/train.cfg
+++ b/train.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Oct. 31, 2020   |   "
+echo "   |   Nov. 01, 2020   |   "
 
 
 // Game Mode
@@ -32,6 +32,7 @@ mp_match_end_restart 1
 mp_ignore_round_win_conditions 1
 
 mp_buy_anywhere 1
+mp_buy_during_immunity 0
 mp_randomspawn 0
 mp_randomspawn_los 1
 mp_respawn_immunitytime 0
