--- a/trainbots.cfg
+++ b/trainbots.cfg
@@ -10,18 +10,18 @@ game_mode 0
 
 exec gamemode_competitive.cfg
 
-sv_cheats 1
+sv_cheats 0
 
 mp_autokick 0
 mp_autoteambalance 0
 mp_limitteams 0
 mp_teammates_are_enemies 0
-mp_solid_teammates 1
+mp_solid_teammates 0
 
-mp_buytime 3600
+mp_buytime 20
 mp_c4timer 40
 mp_warmuptime 5
-mp_freezetime 0
+mp_freezetime 2
 mp_roundtime 1.92
 mp_roundtime_defuse 1.92
 mp_roundtime_hostage 1.92
@@ -29,18 +29,18 @@ mp_halftime_duration 5
 mp_timelimit 0
 
 mp_match_end_restart 1
-mp_ignore_round_win_conditions 1
+mp_ignore_round_win_conditions 0
 
-mp_buy_anywhere 1
+mp_buy_anywhere 0
 mp_buy_during_immunity 0
 mp_randomspawn 0
 mp_randomspawn_los 1
 mp_respawn_immunitytime 0
-mp_respawn_on_death_ct 1
-mp_respawn_on_death_t 1
+mp_respawn_on_death_ct 0
+mp_respawn_on_death_t 0
 
-mp_maxmoney 65000
-mp_startmoney 65000
+mp_maxmoney 16000
+mp_startmoney 16000
 
 
 // Communication
@@ -53,7 +53,7 @@ sv_talk_enemy_living 1
 sv_coaching_enabled 1
 
 sv_disable_radar 0
-mp_radar_showall 1
+mp_radar_showall 0
 
 
 // Movement
@@ -92,24 +92,24 @@ weapon_accuracy_nospread 0
 
 // Health, Armor, and Ammunition
 
-sv_regeneration_force_on 1
+sv_regeneration_force_on 0
 sv_falldamage_scale 1
 mp_damage_headshot_only 0
 mp_damage_vampiric_amount 0
 
-mp_free_armor 2
+mp_free_armor 0
 
-sv_infinite_ammo 1
+sv_infinite_ammo 0
 ammo_grenade_limit_default 1
 ammo_grenade_limit_flashbang 2
-ammo_grenade_limit_total 6
+ammo_grenade_limit_total 4
 
 
 // Weapons
 
 mp_drop_knife_enable 0
 mp_drop_grenade_enable 0
-mp_give_player_c4 0
+mp_give_player_c4 1
 mp_defuser_allocation 0
 mp_items_prohibited ""
 mp_weapons_allow_map_placed 0
@@ -118,16 +118,16 @@ mp_t_default_primary ""
 mp_ct_default_primary ""
 mp_t_default_secondary "weapon_glock"
 mp_ct_default_secondary "weapon_hkp2000"
-mp_t_default_grenades "weapon_snowball weapon_flashbang weapon_flashbang weapon_smokegrenade"
-mp_ct_default_grenades "weapon_snowball weapon_flashbang weapon_flashbang weapon_smokegrenade"
+mp_t_default_grenades ""
+mp_ct_default_grenades ""
 
-mp_death_drop_breachcharge 0
-mp_death_drop_c4 0
-mp_death_drop_defuser 0
-mp_death_drop_grenade 0
-mp_death_drop_gun 0
-mp_death_drop_healthshot 0
-mp_death_drop_taser 0
+mp_death_drop_breachcharge 1
+mp_death_drop_c4 1
+mp_death_drop_defuser 1
+mp_death_drop_grenade 2
+mp_death_drop_gun 1
+mp_death_drop_healthshot 1
+mp_death_drop_taser 1
 
 
 // Bots
@@ -136,17 +136,17 @@ bot_autodifficulty_threshold_high 20.0
 bot_autodifficulty_threshold_low 20.0
 bot_kick
 bot_difficulty 3
-bot_dont_shoot 1
-bot_join_team any
+bot_dont_shoot 0
+bot_join_team T
 bot_mimic_yaw_offset 180
-bot_quota 0
-bot_stop 1
+bot_quota 6
+bot_stop 0
 
 
 mp_restartgame 1
 
 play "buttons\light_power_on_switch_01.wav"
 
-echo "   |  TRAIN 2 LOADED!  |   "
+echo "   | TRAINBOTS LOADED! |   "
 echo "   ---------------------   "
 echo "                           "
