--- a/traindmawp.cfg
+++ b/traindmawp.cfg
@@ -1,14 +1,49 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Jan. 04, 2020   |   "
+echo "   |   Nov. 01, 2020   |   "
 
+
+// Game Mode
 
 game_type 0
 game_mode 0
 
-exec gamemode_competitive.cfg
+exec gamemode_deathmatch.cfg
 
 sv_cheats 1
+
+mp_autokick 0
+mp_autoteambalance 0
+mp_limitteams 0
+mp_teammates_are_enemies 0
+mp_solid_teammates 1
+
+mp_buytime 3600
+mp_c4timer 40
+mp_warmuptime 5
+mp_freezetime 0
+mp_roundtime 1
+mp_roundtime_defuse 0
+mp_roundtime_hostage 0
+mp_halftime_duration 5
+mp_timelimit 0
+
+mp_match_end_restart 1
+mp_ignore_round_win_conditions 1
+
+mp_buy_anywhere 1
+mp_buy_during_immunity 0
+mp_randomspawn 1
+mp_randomspawn_los 1
+mp_respawn_immunitytime 6
+mp_respawn_on_death_ct 1
+mp_respawn_on_death_t 1
+
+mp_maxmoney 65000
+mp_startmoney 65000
+
+
+// Communication
 
 sv_full_alltalk 1
 sv_alltalk 1
@@ -17,23 +52,85 @@ sv_talk_enemy_dead 1
 sv_talk_enemy_living 1
 sv_coaching_enabled 1
 
-sv_infinite_ammo 1
-sv_regeneration_force_on 0
+sv_disable_radar 0
+mp_radar_showall 0
 
+
+// Movement
+
+sv_enablebunnyhopping 0
+sv_autobunnyhopping 0
+sv_clamp_unsafe_velocities 1
+
+sv_friction 5.2
+sv_accelerate 5.5
+sv_airaccelerate 12
+
+sv_staminamax 80
+sv_staminajumpcost 0.080
+sv_staminalandcost 0.050
+sv_min_jump_landing_sound 260.0
+
+sv_ladder_scale_speed 0.78
+sv_timebetweenducks 0.4
+
+
+// Trajectory and Accuracy
+
+cl_grenadepreview 0
 sv_grenade_trajectory 0
 sv_grenade_trajectory_dash 1
+
 sv_showimpacts 0
 sv_showimpacts_time 20
 sv_showlagcompensation 0
 
-cl_grenadepreview 0
 cl_crosshair_recoil 0
 cl_weapon_debug_show_accuracy 0
 weapon_accuracy_nospread 0
 
+
+// Health, Armor, and Ammunition
+
+sv_regeneration_force_on 0
+sv_falldamage_scale 1
+mp_damage_headshot_only 0
+mp_damage_vampiric_amount 1
+
+mp_free_armor 1
+
+sv_infinite_ammo 0
 ammo_grenade_limit_default 1
 ammo_grenade_limit_flashbang 2
 ammo_grenade_limit_total 6
+
+
+// Weapons
+
+mp_drop_knife_enable 0
+mp_drop_grenade_enable 0
+mp_give_player_c4 0
+mp_defuser_allocation 0
+mp_items_prohibited ""
+mp_weapons_allow_map_placed 0
+
+mp_t_default_primary "weapon_awp"
+mp_ct_default_primary "weapon_awp"
+mp_t_default_secondary "weapon_deagle"
+mp_ct_default_secondary "weapon_deagle"
+mp_t_default_grenades "weapon_flashbang weapon_flashbang weapon_smokegrenade"
+mp_ct_default_grenades "weapon_flashbang weapon_flashbang weapon_smokegrenade"
+
+mp_death_drop_breachcharge 0
+mp_death_drop_c4 0
+mp_death_drop_defuser 0
+mp_death_drop_grenade 0
+mp_death_drop_gun 0
+mp_death_drop_healthshot 0
+mp_death_drop_taser 0
+
+
+// Bots
 
 bot_autodifficulty_threshold_high 20.0
 bot_autodifficulty_threshold_low 20.0
@@ -45,64 +142,8 @@ bot_mimic_yaw_offset 0
 bot_quota 0
 bot_stop 0
 
-mp_autokick 0
-mp_autoteambalance 0
-mp_limitteams 0
 
-mp_items_prohibited ""
-mp_give_player_c4 0
-
-mp_t_default_primary "weapon_awp"
-mp_ct_default_primary "weapon_awp"
-mp_t_default_secondary "weapon_deagle"
-mp_ct_default_secondary "weapon_deagle"
-mp_t_default_grenades "weapon_flashbang weapon_flashbang weapon_smokegrenade"
-mp_ct_default_grenades "weapon_flashbang weapon_flashbang weapon_smokegrenade"
-
-mp_weapons_allow_map_placed 0
-mp_match_end_restart 1
-mp_halftime_duration 5
-
-mp_buytime 3600
-mp_c4timer 40
-mp_freezetime 3
-mp_roundtime 1.92
-mp_roundtime_defuse 1.92
-mp_roundtime_hostage 1.92
-
-mp_death_drop_breachcharge 0
-mp_death_drop_c4 0
-mp_death_drop_defuser 0
-mp_death_drop_grenade 0
-mp_death_drop_gun 0
-mp_death_drop_healthshot 0
-mp_death_drop_taser 0
-
-mp_damage_headshot_only 0
-mp_damage_vampiric_amount 0
-mp_defuser_allocation 0
-mp_free_armor 1
-
-mp_ignore_round_win_conditions 1
-mp_solid_teammates 1
-mp_teammates_are_enemies 0
-mp_radar_showall 0
-
-mp_buy_anywhere 0
-mp_randomspawn 1
-mp_randomspawn_los 1
-mp_respawn_immunitytime 6
-mp_respawn_on_death_ct 1
-mp_respawn_on_death_t 1
-
-mp_maxmoney 0
-mp_startmoney 0
-
-mp_warmuptime 0
 mp_restartgame 1
-
-bind x "give weapon_healthshot; slot12"
-
 
 play "buttons\light_power_on_switch_01.wav"
 
