Added radial radio chat wheel.

--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Oct. 29, 2020   |   "
+echo "   |   Dec. 05, 2020   |   "
 
 // Launch: -freq 240 -nojoy -novid -console -fullscreen +mat_software_aa_strength 0
 
@@ -256,7 +256,7 @@ unbindall
 alias "+robocop" "cl_crosshairsize 450"
 alias "-robocop" "cl_crosshairsize 5"
 
-bind "0" "slot10"
+bind "0" "slot13"
 bind "1" "slot1"
 bind "2" "slot2"
 bind "3" "slot7"
@@ -265,7 +265,7 @@ bind "5" "+robocop; slot8"
 bind "6" "slot5"
 bind "7" "slot5"
 bind "8" "slot4"
-bind "9" "slot9"
+bind "9" "slot12"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
 bind "c" "player_ping"
@@ -273,7 +273,7 @@ bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
-bind "h" "say_team Drop"
+bind "h" "+radialradio3"
 bind "i" "cl_crosshairdot 1; cl_crosshairgap -2; cl_crosshairsize 6; cl_crosshairstyle 5"
 unbind "j"
 bind "k" "+voicerecord"
@@ -289,7 +289,7 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "slot12"
+bind "x" "+radialradio"
 bind "y" "messagemode"
 bind "z" "radio"
 bind "KP_INS" "buy vest"
@@ -349,7 +349,7 @@ unbind "RIGHTARROW"
 bind "F1" "use weapon_c4; drop"
 bind "F2" "slot9"
 bind "F3" "slot10"
-bind "F4" "say_team Bomb dropped!"
+bind "F4" "+radialradio2"
 unbind "F5"
 unbind "F6"
 unbind "F7"
@@ -365,6 +365,31 @@ bind "MOUSE4" "lastinv"
 bind "MOUSE5" "toggle mat_monitorgamma 2.22 1.88"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
+
+cl_radial_radio_tab_0_text_1 "#Chatwheel_oneenemyhere"
+cl_radial_radio_tab_0_text_2 "#Chatwheel_flashbang"
+cl_radial_radio_tab_0_text_3 "#Chatwheel_bplan"
+cl_radial_radio_tab_0_text_4 "#Chatwheel_sticktogether"
+cl_radial_radio_tab_0_text_5 "#Chatwheel_needbackup"
+cl_radial_radio_tab_0_text_6 "#Chatwheel_spreadout"
+cl_radial_radio_tab_0_text_7 "#Chatwheel_aplan"
+cl_radial_radio_tab_0_text_8 "#Chatwheel_smoke"
+cl_radial_radio_tab_1_text_1 "#Chatwheel_ihavethebomb"
+cl_radial_radio_tab_1_text_2 "#Chatwheel_youfixbomb"
+cl_radial_radio_tab_1_text_3 "#Chatwheel_followingyou"
+cl_radial_radio_tab_1_text_4 "#Chatwheel_bombcarrierspotted"
+cl_radial_radio_tab_1_text_5 "#Chatwheel_droppedbomb"
+cl_radial_radio_tab_1_text_6 "#Chatwheel_sniperspotted"
+cl_radial_radio_tab_1_text_7 "#Chatwheel_holdposition"
+cl_radial_radio_tab_1_text_8 "#Chatwheel_ifixbomb"
+cl_radial_radio_tab_2_text_1 "#Chatwheel_requestplan"
+cl_radial_radio_tab_2_text_2 "#Chatwheel_requestspend"
+cl_radial_radio_tab_2_text_3 "#Chatwheel_affirmative"
+cl_radial_radio_tab_2_text_4 "#Chatwheel_thanks"
+cl_radial_radio_tab_2_text_5 "#Chatwheel_requestweapon"
+cl_radial_radio_tab_2_text_6 "#Chatwheel_decoy"
+cl_radial_radio_tab_2_text_7 "#Chatwheel_negative"
+cl_radial_radio_tab_2_text_8 "#Chatwheel_requestecoround"
 
 
 ///////////////
