--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 05, 2020   |   "
+echo "   |   Dec. 08, 2020   |   "
 
-// Launch: -freq 75 -nojoy -novid -tickrate 128
+// Launch: -freq 75 -nojoy -novid -tickrate 128 -allow_third_party_software
 
 
 ///////////////
