--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 05, 2020   |   "
+echo "   |   Dec. 08, 2020   |   "
 
-// Launch: -freq 144 -nojoy -novid -console -disable_d3d9ex -allow_third_party_software
+// Launch: -freq 144 -nojoy -novid -console -tickrate 128 -disable_d3d9ex -allow_third_party_software
 
 
 ///////////////
