--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 05, 2020   |   "
+echo "   |   Dec. 08, 2020   |   "
 
-// Launch: -freq 240 -nojoy -novid -console -fullscreen +mat_software_aa_strength 0
+// Launch: -freq 240 -nojoy -novid -console -tickrate 128 -allow_third_party_software -fullscreen +mat_software_aa_strength 0
 
 
 ///////////////
