--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 08, 2020   |   "
+echo "   |   Dec. 22, 2020   |   "
 
 // Launch: -freq 240 -nojoy -novid -console -tickrate 128 -allow_third_party_software -fullscreen +mat_software_aa_strength 0
 
@@ -187,6 +187,7 @@ cl_sniper_delay_unscope "0"
 
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
+cl_buywheel_donate_key "2"
 cl_buywheel_nomousecentering "0"
 cl_buywheel_nonumberpurchasing "0"
 cl_autobuy "vest ak47 m4a1 galilar famas ssg08 flashbang defuser"
