Added bot_quota_mode normal.

--- a/trainbots.cfg
+++ b/trainbots.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 01, 2020   |   "
+echo "   |   Mar. 22, 2021   |   "
 
 
 // Game Mode
@@ -140,6 +140,7 @@ bot_dont_shoot 0
 bot_join_team T
 bot_mimic_yaw_offset 180
 bot_quota 6
+bot_quota_mode "normal"
 bot_stop 0
 
 
