--- a/traindm.cfg
+++ b/traindm.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 01, 2020   |   "
+echo "   |   Mar. 22, 2021   |   "
 
 
 // Game Mode
@@ -140,6 +140,7 @@ bot_dont_shoot 1
 bot_join_team any
 bot_mimic_yaw_offset 0
 bot_quota 0
+bot_quota_mode "normal"
 bot_stop 0
 
 
