--- a/train.cfg
+++ b/train.cfg
@@ -33,6 +33,7 @@ mp_ignore_round_win_conditions 1
 
 mp_buy_anywhere 1
 mp_buy_during_immunity 0
+mp_buy_allow_grenades 1
 mp_randomspawn 0
 mp_randomspawn_los 1
 mp_respawn_immunitytime 0
@@ -123,8 +124,8 @@ mp_ct_default_grenades "weapon_snowball weapon_flashbang weapon_flashbang weapon
 
 mp_death_drop_breachcharge 1
 mp_death_drop_c4 1
-mp_death_drop_defuser 1
-mp_death_drop_grenade 2
+mp_death_drop_defuser 0
+mp_death_drop_grenade 0
 mp_death_drop_gun 1
 mp_death_drop_healthshot 1
 mp_death_drop_taser 1
