--- a/traindmawp.cfg
+++ b/traindmawp.cfg
@@ -33,6 +33,7 @@ mp_ignore_round_win_conditions 1
 
 mp_buy_anywhere 1
 mp_buy_during_immunity 0
+mp_buy_allow_grenades 1
 mp_randomspawn 1
 mp_randomspawn_los 1
 mp_respawn_immunitytime 6
