Added escape sequence to backslash (\) bind.
Apparently, CSGO now checks config files for escape sequences.
https://blog.counter-strike.net/index.php/2021/04/33895/

--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 22, 2020   |   "
+echo "   |   May. 01, 2020   |   "
 
 // Launch: -freq 240 -nojoy -novid -console -tickrate 128 -allow_third_party_software -fullscreen +mat_software_aa_strength 0
 
@@ -317,7 +317,7 @@ bind "`" "toggleconsole"
 bind "," "toggle mat_monitorgamma 2.6 2.22 1.88"
 bind "." "toggle hud_scaling 0.95 0.5 0.85"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
-bind "\" "toggle cl_crosshairdot 0 1"
+bind "\\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 2 1 5 4"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
