--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 01, 2020   |   "
+echo "   |   May. 05, 2021   |   "
 
 // Launch: -freq 144 -nojoy -novid -console -tickrate 128 -disable_d3d9ex -allow_third_party_software
 
@@ -317,7 +317,7 @@ bind "`" "toggleconsole"
 bind "," "toggle mat_monitorgamma 2.6 2.22 1.88"
 bind "." "toggle hud_scaling 0.95 0.5 0.85"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
-bind "\\" "toggle cl_crosshairdot 0 1"
+bind "\" "toggle cl_crosshairdot 0 1"
 bind "-" "toggle cl_crosshairsize 2 1 5 4"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
