--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 01, 2020   |   "
+echo "   |   May. 05, 2021   |   "
 
 // Launch: -freq 75 -nojoy -novid -tickrate 128 -allow_third_party_software
 
@@ -320,7 +320,7 @@ bind "`" "toggleconsole"
 unbind ","
 unbind "."
 unbind "/"
-unbind "\\"
+unbind "\"
 unbind "-"
 unbind "="
 unbind "ENTER"
