Changed in-game voice bind.

--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 05, 2021   |   "
+echo "   |   May. 31, 2021   |   "
 
 // Launch: -freq 75 -nojoy -novid -tickrate 128 -allow_third_party_software
 
@@ -272,7 +272,7 @@ bind "8" "slot4"
 bind "9" "slot12"
 bind "a" "+moveleft"
 bind "b" "buymenu"
-bind "c" "+voicerecord"
+bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
 bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
@@ -280,7 +280,7 @@ bind "g" "drop"
 bind "h" "+radialradio3"
 unbind "i"
 unbind "j"
-bind "k" "player_ping"
+unbind "k"
 unbind "l"
 bind "m" "teammenu"
 bind "n" "noclip"
@@ -291,7 +291,7 @@ bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "+lookatweapon"
+bind "v" "+voicerecord; r_cleardecals; +lookatweapon"
 bind "w" "+forward"
 bind "x" "+radialradio"
 bind "y" "messagemode"
