--- a/napkincsgo.cfg
+++ b/napkincsgo.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   May. 05, 2021   |   "
+echo "   |   May. 31, 2021   |   "
 
 // Launch: -freq 240 -nojoy -novid -console -tickrate 128 -allow_third_party_software -fullscreen +mat_software_aa_strength 0
 
@@ -288,7 +288,7 @@ bind "r" "+reload"
 bind "s" "+back"
 bind "t" "+use"
 bind "u" "messagemode2"
-bind "v" "r_cleardecals; +lookatweapon"
+bind "v" "+voicerecord; r_cleardecals; +lookatweapon"
 bind "w" "+forward"
 bind "x" "+radialradio"
 bind "y" "messagemode"
